--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,7 @@
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-smile"></i> DankMemer</h1>
+      <h1>DankMemer</h1>
       <a href="index.html" class="btn">Leave Room</a>
     </header>
     <main class="chat-main">
@@ -22,11 +22,12 @@
       </div>
       <div class="chat-messages">
       </div>
+      <div class="chat-images"></div>
     </main>
     <div class="chat-form-container">
       <form id="chat-form">
           <label for="image-upload"><i class="fa fa-camera-retro fa-lg"></i></label>
-        <input type="file" id="image-upload"></input>
+        <input type="file" id="image-upload" accept="image/gif, image/jpeg, image/png"></input>
         <input
           id="msg"
           type="text"
@@ -42,6 +43,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js" integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w==" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
+
   <!--script type="module" src="config/fbase.js"></script-->
   <script src="js/main.js"></script>
 </body>
