resized image before emit to server/tf.js empty pixels resolved

--- a/public/chat.html
+++ b/public/chat.html
@@ -48,7 +48,7 @@
   <!--script type="module" src="config/fbase.js"></script-->
 
   <script src="js/main.js"></script>
-
+  <script type="module" src="js/utilfunc.js"></script>
   <!--script type="module" src="js/predict.js"></script-->
 </body>
 </html>
