imroved ui: changed bg,colour scheme

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
 			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
 			crossorigin="anonymous"
 		/>
+        <link rel="shortcut icon" href="./images/cheemsicon.jpg" type="image/x-icon" />
 		<link rel="stylesheet" href="css/style.css" />
-		<title>ChatCord App</title>
+		<title>Cheems Or Not</title>
 	</head>
 	<body>
 		<div class="join-container">
